--- a/index.html
+++ b/index.html
@@ -4,11 +4,234 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <title>Team Page</title>
 </head>
 <body>
     <div class="team__box">
+        <!-- Место для хеадера -->
+        <div class="team__box__content">
+            <div class="content__team">
+                <div class="content__team__float-nav"></div>
+                <div class="content__info">
+                    <div class="content__info-photo"><img src="img/about.jpg"></div>
+                    <div class="content__info-text">
+                        <div class="content__info-text__title">
+                            «Партия еды» появилась на свет в июле 2014-го года.
+                        </div>
+                        <div class="content__info-text__pre-title">
+                            Официальным днем рождения компании считается<br>
+                            17 августа 2014 — день первой доставки.
+                        </div>
+                        <div class="content__info-text__text">
+                            Мы разделяем идею о том, что еда должна быть вкусной, полезной и вовремя. Наша команда насчитывает несколько десятков человек, и ежедневно все вместе мы прикладываем усилия, чтобы ваши ужины получились именно такими — вкусными и полезными.
+                        </div>
+                    </div>
 
+                    <div class="content__info__persons">
+                        <div class="persons__line persons__line-one">
+                            <div class="persons__line-person">
+                                <div class="person-photo"><img src="img/peregudov.png"></div>
+                                <div class="person-name">Михаил Перегудов</div>
+                                <div class="person-prof">Основатель, генеральный директор</div>
+                                <div class="person-quote">«Люблю жену, кота и клиентов»</div>
+                                <div class="person-links">
+                                    <div class="person-links-mail"><span class="person-links-icon"><img src="img/mail.png"></span><a href="#">Написать письмо</a></div>
+                                    <div class="person-links-vk"><span class="person-links-icon"><img src="img/vk.png"></span><a href="#">Вконтакте</a></div>
+                                    <div class="person-links-fb"><span class="person-links-icon"><img src="img/fb.png"></span><a href="#">Фейсбук</a></div>
+                                </div>
+                            </div>
+                            <div class="persons__line-person-right">
+                                <div class="person-photo"><img src="img/stepanov.png"></div>
+                                <div class="person-name">Михаил Степанов</div>
+                                <div class="person-prof">Шеф-повар</div>
+                                <div class="person-quote">«В еде главное - хорошее настроение»</div>
+                                <div class="person-links">
+                                    <div class="person-links-mail"><span class="person-links-icon"><img src="img/mail.png"></span><a href="#">Написать письмо</a></div>
+                                    <div class="person-links-vk"><span class="person-links-icon"><img src="img/vk.png"></span><a href="#">Вконтакте</a></div>
+                                    <div class="person-links-fb"><span class="person-links-icon"><img src="img/fb.png"></span><a href="#">Фейсбук</a></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="persons__line persons__line-two">
+                            <div class="persons__line-person">
+                                <div class="persons__line-person">
+                                    <div class="person-photo"><img src="img/marinovich.png"></div>
+                                    <div class="person-name">Владимир Маринович</div>
+                                    <div class="person-prof marin-prof">Евангелист, cоветник совета директоров по маркетингу</div>
+                                    <div class="person-links">
+                                        <div class="person-links-vk"><span class="person-links-icon"><img src="img/vk.png"></span><a href="#">Вконтакте</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="persons__line-person-right">
+                                <div class="persons__line-person">
+                                    <div class="person-photo"><img src="img/semenova.png"></div>
+                                    <div class="person-name">Валерия Семёнова</div>
+                                    <div class="person-prof">PR-директор</div>
+                                    <div class="person-quote">«Всегда имею при себе хорошие новости»</div>
+                                    <div class="person-links">
+                                        <div class="person-links-mail"><span class="person-links-icon"><img src="img/mail.png"></span><a href="#">Написать письмо</a></div>
+                                        <div class="person-links-vk"><span class="person-links-icon"><img src="img/vk.png"></span><a href="#">Вконтакте</a></div>
+                                        <div class="person-links-fb"><span class="person-links-icon"><img src="img/fb.png"></span><a href="#">Фейсбук</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="persons__line persons__line-three">
+                            <div class="persons__line-person">
+                                <div class="persons__line-person">
+                                    <div class="person-photo"><img src="img/mishina.png"></div>
+                                    <div class="person-name">Ирина Мишина</div>
+                                    <div class="person-prof mishina-prof">Руководитель отдела продаж</div>
+                                    <div class="person-quote">«Хочешь быть кем-то особенным - будь самим собой»</div>
+                                    <div class="person-links">
+                                        <div class="person-links-mail"><span class="person-links-icon"><img src="img/mail.png"></span><a href="#">Написать письмо</a></div>
+                                        <div class="person-links-vk"><span class="person-links-icon"><img src="img/vk.png"></span><a href="#">Вконтакте</a></div>
+                                        <div class="person-links-fb"><span class="person-links-icon"><img src="img/fb.png"></span><a href="#">Фейсбук</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="persons__line-person-right">
+                                <div class="persons__line-person">
+                                    <div class="person-photo"><img src="img/pisukova.png"></div>
+                                    <div class="person-name">Ирина Писюкова</div>
+                                    <div class="person-prof pisucova-prof">Координатор меню</div>
+                                    <div class="person-quote">«Вывожу формулу идеального ужина»</div>
+                                    <div class="person-links">
+                                        <div class="person-links-mail"><span class="person-links-icon"><img src="img/mail.png"></span><a href="#">Написать письмо</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="persons__line persons__line-four">
+                            <div class="persons__line-person">
+                                <div class="persons__line-person">
+                                    <div class="person-photo"><img src="img/ilina.png"></div>
+                                    <div class="person-name">Виктория Ильина</div>
+                                    <div class="person-prof ilina-prof">Начальник отдела снабжения</div>
+                                    <div class="person-links">
+                                        <div class="person-links-mail"><span class="person-links-icon"><img src="img/mail.png"></span><a href="#">Написать письмо</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="persons__line-person-right">
+                                <div class="persons__line-person">
+                                    <div class="person-photo"><img src="img/ilyashenko.png"></div>
+                                    <div class="person-name">Инна Ильяшенко</div>
+                                    <div class="person-prof ilyash-prof">Главный Бухгалтер</div>
+                                    <div class="person-quote">«Наши достижения всегда соответствуют нашим амбициям»
+                                    </div>
+                                    <div class="person-links">
+                                        <div class="person-links-mail"><span class="person-links-icon"><img src="img/mail.png"></span><a href="#">Написать письмо</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="persons__line persons__line-five">
+                            <div class="persons__line-person">
+                                <div class="persons__line-person">
+                                    <div class="person-photo"><img src="img/cherenkova.png"></div>
+                                    <div class="person-name">Лилия Черенкова</div>
+                                    <div class="person-prof">PR-менеджер</div>
+                                    <div class="person-links">
+                                        <div class="person-links-mail"><span class="person-links-icon"><img src="img/mail.png"></span><a href="#">Написать письмо</a></div>
+                                        <div class="person-links-vk"><span class="person-links-icon"><img src="img/vk.png"></span><a href="#">Вконтакте</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="persons__line-person-right">
+                                <div class="persons__line-person">
+                                    <div class="person-photo"><img src="img/rudnev.png"></div>
+                                    <div class="person-name">Денис Руднев</div>
+                                    <div class="person-prof rudnev-prof">Фотограф</div>
+                                    <div class="person-quote">«Партия всегда дает четкие ТЗ»</div>
+                                    <div class="person-links">
+                                        <div class="person-links-mail"><span class="person-links-icon"><img src="img/mail.png"></span><a href="#">Написать письмо</a></div>
+                                        <div class="person-links-vk"><span class="person-links-icon"><img src="img/vk.png"></span><a href="#">Вконтакте</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="team__box__write-about">
+            <div class="write-about__title">О нас уже писали:</div>
+            <div class="write-about__writers">
+                <div class="img_wr expert"></div>
+                <div class="img_wr like"></div>
+                <div class="img_wr vedomosti"></div>
+                <div class="img_wr rbk"></div>
+                <div class="img_wr interfacs"></div>
+                <div class="img_wr vilage"></div>
+            </div>
+        </div>
+        <div class="team__box__social-block">
+            <div class="social-block__social__wrapper">
+                <div class="fb-block">Facebook</div>
+                <div class="vk-block">Вконтакте</div>
+            </div>
+        </div>
+        <div class="team__box__footer">
+            <div class="footer__wrapper">
+                <div class="block-box">
+                    <div class="block-box__promo">
+                        <div class="promo__code">
+                            <div class="title-code">ваш личный код:</div>
+                            <div class="code">xXpSY</div>
+                        </div>
+                        <div class="promo__text">
+                            <p>По этому коду ваши друзья получат скидку 500 рублей на первый заказ. Вы же получите от нас по 500 рублей за каждого приведенного друга.</p>
+                            <span>Опубликовать код:</span>
+                            <div class="social-buttons">
+                                <div class="vk_btn"></div>
+                                <div class="fb_btn"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block-box__contacts">
+                        <div class="contacts__title">Контакты:</div>
+                        <div class="contacts__phone">
+                            <div class="phone-moscow">В Москве: +7(495)268-0728</div>
+                            <div class="phone-peter">В Санкт-Петербурге: +7(812)309-9409</div>
+                            <div class="phone-mail"><a href="#">welcome@partiyaedi.ru</a></div>
+                        </div>
+                        <div class="write__personal">
+                            <div class="personal person-one">
+                                <div class="personal-avatar one-av"></div>
+                                <div class="personal-link"><a href="#">Написать основателю</a></div>
+                            </div>
+                            <div class="personal person-two">
+                                <div class="personal-avatar two-av"></div>
+                                <div class="personal-link"><a href="#">Написать шеф-повару</a></div>
+                            </div>
+                        </div>
+                        <div class="groups">
+                            <div class="groups__vk"></div>
+                            <div class="groups__fb"></div>
+                            <div class="groups__ok"></div>
+                            <div class="groups__inst"></div>
+                            <div class="groups__yell"><a href="#">Написать отзыв на Yell</a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-nav">
+                    <div class="footer-nav__company nav-block"><a href="#">О компании</a></div>
+                    <div class="footer-nav__menu nav-block"><a href="#">В меню</a></div>
+                    <div class="footer-nav__work nav-block"><a href="#">Как это работает</a></div>
+                    <div class="footer-nav__curier nav-block"><a href="#">Доставка и оплата</a></div>
+                    <div class="footer-nav__question nav-block"><a href="#">Вопросы и ответы</a></div>
+                    <div class="footer-nav__instruct nav-block"><a href="#">Условия обслуживания</a></div>
+                    <div class="footer-nav__coolar nav-block"><a href="#"></a></div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
