--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="empty-clear"></div>
             </div>
         </div>
         <div class="team__box__write-about">
